# git2-cxx

./: .clang-format  .covcollect  .covcollect.in  .covmodule  .covmodules  .gitignore  .gitmodules  CHANGELOG.md  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakePresets.json  COMMITS.md  LICENSE  README.md  ROADMAP.md  conanfile.txt  config.cmd  config.sh  flow.json  flow.py  run_cpplint.cmd  run_linter.py  runner.chai
apps/: CMakeLists.txt  builds-schema.json  report-schema.json
apps/builtins/: builtin_branch.cc  builtin_checkout.cc  builtin_config.cc  builtin_init.cc  builtin_log.cc  builtin_module.cc  builtin_report.cc  builtin_reset.cc  builtin_show.cc  builtin_tag.cc
apps/collect/: gnu.cc  llvm.cc  queue.hh  report.hh  toolkit.hh
apps/cov/: cov.cc
apps/filters/: cobertura.py  coveralls.py  strip_excludes.cc
apps/filters/native/: platform.cc  str.hh
apps/tests/: cov-echo.cc  cov-pwd.cc  exe_driver.py  nullify.py  runner-schema.json  test_driver.py  test_runner.py
apps/tests/data/: basic-coverage.json  build-coverage-2-files.json  build-coverage-same-stats-diff-visits.json  build-coverage-show-functions-1.json  build-coverage-show-functions-2.json  build-coverage-show-functions-3.json  build-coverage-show-modules-2.json  build-coverage-show-modules.json  build-coverage-show-multiple-chunks.json  build-coverage-show-no-chunks.json  build-coverage.json  empty-coverage.json  extensions.tar  invalid-coverage.json  no-git-coverage.json  repo.covmodule.tar  repo.covmodules.tar  repo.git.tar  revparse.tar
apps/tests/driver/: commands.py  test.py  testbed.py
apps/tests/main-set/: 001-version.json  002-help.json  003-unknown-option.json  004-alias.json  005-alias-short-help.json  006-alias-long-help.json  007-alias-to-nothing.json  008-bad-alias.json  009-external-tool.json  010-escaped-arguments.json  011-multiple-aliases.json  012-list-cmds.json  013-bad-alias copy.json  013-bad-alias-full-output.json  014-echo-with-nonascii-arguments.json  015-init-no-args.json  016-init-git-dir.json  017-init-directory.json  018-init-dependent.json  019-init-independent.json  020-init-no-gitrepo.json  021-init-no-args-no-cwd.json  022-init-git-dir-relative.json  023-init-no-force.json  024-init-force.json
apps/tests/messages-pl/: 001-version.json  002-help.json  003-unknown-option.json  004-alias.json  005-alias-short-help.json  007-alias-to-nothing.json  008-bad-alias.json  013-bad-alias-full-output.json  015-init-no-args.json  020-init-no-gitrepo.json  021-init-no-args-no-cwd.json  023-init-no-force.json  024-init-force.json
apps/tests/test-filters/: create-report.py  echo-to-stderr.py  empty.py  replace-head.py
apps/win32/: cov.rc  versioninfo.h
extensions/: CMakeLists.txt  cov_collect.cc
extensions/filters/: strip_excludes.cc
extensions/filters/strip_excludes/: excludes_tr.hh  parser.cc  parser.hh
extensions/libs/: CMakeLists.txt
extensions/libs/collect-api/: CMakeLists.txt
extensions/libs/excludes/: CMakeLists.txt
extensions/libs/ext_native/: CMakeLists.txt
extensions/libs/native/: CMakeLists.txt
extensions/tests/: CMakeLists.txt  mock_cl.cc  mock_clang.cc  mock_gcc.cc  mock_llvm_profdata.cc
extras/: CMakeLists.txt
extras/cov_export/: CMakeLists.txt  main.cc  parser.cc  parser.hh  stage.cc  stage.hh
extras/filters/: strip_excludes.cc
extras/filters/strip_excludes/: excludes_tr.hh  parser.cc  parser.hh
extras/highlighter/: CMakeLists.txt
extras/highlighter/src/: highlighter.cc
extras/highlighter/tests/: additional-test.cc  highlighter-cxx.hh  highlighter-test.cc  names-cxx-test.cc  names-none-test.cc  support.hh
extras/hilite-cxx/: CMakeLists.txt
extras/hilite-cxx/src/: cxx.cc
extras/hilite_cxx/: CMakeLists.txt
extras/hilite_cxx/src/: cxx.cc
extras/libs/: CMakeLists.txt
extras/libs/c++filt/: CMakeLists.txt
extras/libs/cxx-filt/: CMakeLists.txt
extras/libs/ext_platform/: CMakeLists.txt
extras/libs/web/: CMakeLists.txt
libs/app/: CMakeLists.txt
libs/app/src/: args.cc  dirs.hh.in  main.cc  path.cc  path_env.hh  posix.cc  tr.cc  win32.cc
libs/cov/: CMakeLists.txt
libs/cov-api/: CMakeLists.txt
libs/cov-api/doc/: format.md
libs/cov-core/: CMakeLists.txt
libs/cov-core/src/: c++filt.cc  column_selectors.cc  column_selectors.hh  cvg_info.cc  line_printer.cc  report_stats.cc
libs/cov-rt/: CMakeLists.txt
libs/cov-rt/src/: branches.cc  checkout.cc  config.cc  cvg_info.cc  dirs.hh.in  line_printer.cc  module.cc  posix.cc  report.cc  report_command.cc  root_command.cc  rt_path.cc  show.cc  show_range.cc  split_command.cc  tools.cc  win32.cc
libs/cov-rt/tests/: errors-test.cc  path-utils.hh  report-test.cc  setup.cc  setup.hh  split_command-test.cc  tools-test.cc  verify-tar.inc  verify-test.inc  win32-narrow-test.cc
libs/cov/doc/: format.md  objects.md
libs/cov/src/: branch-tag.hh  branch.cc  counted.cc  db.cc  discover.cc  error.cc  format.cc  init.cc  module.cc  module_config.cc  path-utils.hh  projection.cc  repository.cc  revparse.cc  streams.cc  version.in.hh  zstream.cc
libs/cov/tests/: branch-test.cc  db-helper.hh  db-test.cc  db_object-test.cc  diff-test.cc  discover-test.cc  error-test.cc  file-test.cc  files-test.cc  hash-test.cc  init-test.cc  is_a-test.cc  line_coverage-test.cc  module-test.cc  path-utils.hh  print-view.cc  print-view.hh  projection-test.cc  rate-tests.cc  ratio-tests.cc  read_stream-test.cc  references-create-test.cc  references-dwim-test.cc  references-iterator.cc  references-test.cc  report-test.cc  report_files-test.cc  repository-test.cc  revparse-tests.cc  setup.cc  setup.hh  stats-test.cc  stream-test.cc  strings-test.cc  tabular-test.cc  tag-test.cc  zstream-test.cc
libs/git2-c++/: CMakeLists.txt
libs/git2-c++/src/: blob.cc  commit.cc  config.cc  error.cc  global.cc  object.cc  odb.cc  ptr.cc  repository.cc  submodule.cc  transaction.cc  tree.cc
libs/git2-c++/tests/: bytes-test.cc  config-test.cc  diff-test.cc  error-test.cc  lookup-test.cc  objects-test.cc  odb-test.cc  renames.cc  renames.hh  repository-test.cc  setup.cc  (+1 more)
libs/hilite/: CMakeLists.txt  README.md
(+1012 files in other folders)
